--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,19 @@
     "require": {
         "php": "^8.0.17",
         "fruitcake/laravel-cors": "^3.0.0",
-        "guzzlehttp/guzzle": "^7.4.2",
-        "laravel/framework": "^9.1.5",
+        "guzzlehttp/guzzle": "^7.5.0",
+        "laravel/framework": "^9.3.7",
         "laravel/sanctum": "^2.15.1",
         "laravel/tinker": "^2.7.2",
-        "laravel/ui": "v3.4.5"
+        "laravel/ui": "^3.4.6"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.2.2",
-        "fakerphp/faker": "^1.19.0",
-        "laravel/sail": "^1.13.10",
-        "mockery/mockery": "^1.5.0",
-        "nunomaduro/collision": "^6.2.0",
-        "phpunit/phpunit": "^9.5.20"
+        "fakerphp/faker": "^1.20.0",
+        "laravel/sail": "^1.16.0",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^6.3.0",
+        "phpunit/phpunit": "^9.5.24",
+        "spatie/laravel-ignition": "^1.4.1"
     },
     "autoload": {
         "psr-4": {
@@ -64,7 +64,10 @@
     "repositories": [
         {
           "type": "path",
-          "url": "../laravel-password-update"
+          "url": "../changepassword",
+          "options": {
+            "symlink": false
+          }
            
         }
       ],
