--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,20 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1.12",
         "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "^9.3.7",
-        "laravel/sanctum": "^2.15.1",
-        "laravel/tinker": "^2.7.2",
-        "laravel/ui": "^3.4.6",
-        "madfortech/separate-admin-dashboard-with-no-crud": "dev-main"
+        "laravel/framework": "^10.0.0",
+        "laravel/sanctum": "^3.2.1",
+        "laravel/tinker": "^2.8.0",
+        "laravel/ui": "^4.2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.20.0",
-        "laravel/sail": "^1.16.0",
+        "fakerphp/faker": "^1.21.0",
+        "laravel/sail": "^1.20.0",
         "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^6.3.0",
-        "phpunit/phpunit": "^9.5.24",
-        "spatie/laravel-ignition": "^1.4.1"
+        "nunomaduro/collision": "^7.0.2",
+        "phpunit/phpunit": "^10.0.7",
+        "spatie/laravel-ignition": "^2.0.0"
     },
     "autoload": {
         "psr-4": {
@@ -30,9 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "laravel-password-update\\": "src"
-
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -58,13 +55,16 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     },
 
     "repositories": [
         {
           "type": "path",
-          "url": "../seperate-admin-dashboard-with-no-crud"
+          "url": "../../PackageTrainning/*"
         }
       ],
     
