--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
+        "@vitejs/plugin-react": "^3.0.1",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.13",
         "axios": "^0.21",
-        "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4",
+        "vite": "^4.0.4"
     }
 }
